# bookstore

./: .gitignore  WORKSPACE
inventory/: BUILD.bazel  pom.xml
inventory/src/main/java/com/example/inventory/: InventoryController.java
reviews/: BUILD.bazel  package-lock.json  package.json
reviews/src/reviews/: index.js
service/: BUILD.bazel
service/bookstore/: bookstore.py  debug.py
web/: BUILD.bazel  angular.json  package-lock.json  package.json
