java_binary(
    name = "inventory",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.example.inventory.InventoryApplication",
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_web",
    ],
)
